--- a/index.html
+++ b/index.html
@@ -4,9 +4,97 @@
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
   </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+  <body>
+    <header>
+      <nav>
+    <h1>DEVICE</h1>
+    <a href="catalog.html">каталог товаров</a>
+    <a href="">Войти</a>
+    <a href="">Сравнить</a>
+    <a href="">Корзина</a>
+    <ul>
+      <li><a href="">Доставка</a></li>
+      <li><a href="">Гарантия</a></li>
+      <li><a href="">Контакты</a></li>
+    </ul>
+  </nav>
+    </header>
+    <main>
+      <aside><img src="https://via.placeholder.com/150x100" alt="Палка"></aside>
+      <section>
+    <p>Делай селфи, как Бен Стиллер!</p>
+    <p>Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
+      <button type="button">Подробнее</button>
+        </section>
+      <section>
+        <h2>Характеристики</h2>
+        <ul>
+          <li>
+          <h3>Длина палки</h3>
+          <p>8,5 м</p>
+        </li>
+          <li>
+          <h3>Вес палки</h3>
+          <p>5 кг</p>
+        </li>
+          <li>
+            <h3>Материал</h3>
+            <p>Карбон</p>
+          </li>
+        </ul>
+        </section>
+    <section>
+      <ul>
+        <li>Виртуальная реальность</li>
+        <li>Моноподы для селфи</li>
+        <li>Экшн-камеры</li>
+        <li>Фитнес-браслеты</li>
+        <li>Умные часы</li>
+        <li>Квадрокоптеры</li>
+      </ul>
+    </section>
+    <section>
+      <button type="button" disabled>Доставка</button>
+      <h4>Доставка</h4>
+      <p> Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж. </p>
+      <button type="button">Гарантия</button>
+      <button type="button">Кредит</button>
+    </section>
+    <section>
+      <h5>О нас</h5>
+      <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+      <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями: </p>
+      <ul>
+        <li>Деловые линии</li>
+        <li>Автотрейдинг</li>
+        <li>ЖелДорЭкспедиция</li>
+      </ul>
+      <button type="button">подробнее о нас</button>
+    </section>
+    <section>
+      <h6>Контакты</h6>
+      <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+      <button type="button">напишите нам</button>
+    </section>
+</main>
 
   </body>
+  <footer>
+    <section>
+    <h7>DEVICE</h7>
+    <p> г. Москва, ул. Строителей, 15 </p>
+  </section>
+  <section>
+    <ul>
+      <li>доставка</li>
+      <li>гарантия</li>
+      <li>контакты</li>
+    </ul>
+  </section>
+  <a href="">Войти</a>
+  <a href="">Сравнить</a>
+  <a href="">Корзина</a>
+  <p>Тел.: +7 (495) 495-95-95</p>
+</footer>
 </html>
